<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_margin="@dimen/card_view_margin"
    android:layout_margin="@dimen/card_view_margin_half"
    android:clickable="false"
    android:elevation="4dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/score_item_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/league_name_padding"
            android:layout_marginStart="@dimen/league_name_padding"
            android:layout_marginEnd="@dimen/league_name_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="League name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/score_item_home_crest"
                    android:contentDescription="@string/description_home_team_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/score_item_home_name"
                    android:contentDescription="@string/description_home_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/TeamNames"
                    android:gravity="center"
                    android:text="Arsenal" />
           </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_item_score"
                    android:contentDescription="@string/description_match_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4 - 2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/Score" />

                <TextView
                    android:id="@+id/score_item_match_day"
                    android:contentDescription="@string/description_match_day"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Match day 2"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/score_item_away_crest"
                    android:contentDescription="@string/description_away_team_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/score_item_away_name"
                    android:contentDescription="@string/description_away_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Manchester"
                    android:textSize="@dimen/TeamNames" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/score_item_share_button"
                android:contentDescription="@string/description_match_share"
                android:drawableLeft="@android:drawable/ic_menu_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/share_text" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

