<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="3dp">

    <TextView
        android:id="@+id/widget_item_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/league_name_padding"
        android:layout_marginStart="@dimen/league_name_padding"
        android:layout_marginEnd="@dimen/league_name_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/primary_text"
        android:text="League name" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_item_home_crest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/description_home_team_crest" />

            <TextView
                android:id="@+id/widget_item_home_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Arsenal"
                android:textSize="@dimen/TeamNames"
                android:textColor="@color/secondary_text"
                android:contentDescription="@string/description_home_team_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_item_score"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="4 - 2"
                android:gravity="center"
                android:textSize="@dimen/Score"
                android:textColor="@color/secondary_text"
                android:contentDescription="@string/description_match_score" />

            <TextView
                android:id="@+id/widget_item_match_day"
                android:layout_height="0dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Match day 2"
                android:textColor="@color/secondary_text"
                android:contentDescription="@string/description_match_day" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_item_away_crest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/description_away_team_crest" />

            <TextView
                android:id="@+id/widget_item_away_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Manchester"
                android:textSize="@dimen/TeamNames"
                android:textColor="@color/secondary_text"
                android:contentDescription="@string/description_away_team_name" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>